<?xml version="1.0" encoding="utf-8"?>
<!--Diseño basado en stitch-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:paddingTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_label"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/cantidadKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:inputType="number"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_border"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/cantidadHoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:inputType="number"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_border"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_label"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_speed_label"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmh_unit"
                android:paddingLeft="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/kilometrosHora"
                android:gravity="center|end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero_hint"
                android:paddingRight="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_speed_label"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ms_unit"
                android:paddingLeft="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/metrosSegundo"
                android:gravity="center|end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero_hint"
                android:paddingRight="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/mensajeError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/error_message"
        android:gravity="bottom"
        />




</LinearLayout>